# melon-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  config.yml  config.yml.copy  expanded.rs  targets.txt
src/: args.rs  audio.rs  config.rs  frontend.rs  game_thread.rs  main.rs  replay.rs  utils.rs
src/events/: mod.rs
src/melon/: mod.rs  nds.rs  save.rs  subscriptions.rs  sys.rs
src/melon/cpp/: Platform.cpp  Replacements.h  Shims.cpp  Shims.h  Util.cpp  Util.h
src/melon/kssu/: addresses.rs  io.rs  mod.rs
src/melon/nds/: audio.rs  input.rs
src/melon/sys/: glue.rs  mod.rs  nds.rs  nds_cart.rs  platform.rs  replacements.rs  shims.rs
src/window/: main.frag  mod.rs
