[package]
name = "melon-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[dependencies]
glium = "0.32.1"
winit = { version = "0.27.5", features = ["serde"] }
cxx = "1.0"
once_cell = "1.16.0"
bitflags = { version = "2.0.2", features = ["serde"] }
fps_clock = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.21"
chrono = { version = "0.4.30", features = ["serde"] }
tokio = { version = "^1", features = ["full"] }
byteorder = "1.4.3"
rodio = "0.17.3"
clap = { version = "4.4.11", features = ["derive"] }

[build-dependencies]
cmake = "0.1"
cxx-build = "1.0"
